--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
+.navbar{
+    background-color: var(--Primary-extra-light);
+}
+.nav-link{
+    color: var(--Primary) !important;
+} 
+
+.nav-link.active{
+    color: var(--Secondary-dark) !important;
+    font-weight: bold;
+    border-bottom: 2px solid var(--Secondary-dark);
+} 
+
+
 .hero{
     height: 70vh;
-    background-color: rgb(134, 134, 134);
+    background: var(--Primary-gradient);
     display: flex;
     align-items: center;
 }
