--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,36 @@
 
 
 .hero{
-    height: 70vh;
+    min-height: 70vh;
     background: var(--Primary-gradient);
     display: flex;
     align-items: center;
+}
+
+.heroImg{
+    width: 100%;
+    padding: 34px 40px;
+}
+
+/* lg screen */
+@media (max-width: 1199.98px) { 
+    .heroImg{
+        padding: 20px;
+    }
+ }
+ /* md screen */
+@media (max-width: 991.98px) { 
+    .heroImg{
+        padding: 12px;
+    }
+ }
+
+ .sectionTitle{
+     text-align: center;
+     margin-bottom: 20px;
+ }
+ .card{
+     margin: 10px 0px;
 }
 
 .footer{
@@ -25,3 +51,4 @@
     padding: 40px;
     margin-top: 60px;
 }
+
